Fixed modal image scaling on small screens. Fixed navigation bar url text decoration.

--- a/css/common.scss
+++ b/css/common.scss
@@ -8,6 +8,7 @@ $col-pink: #F48FB1;
 $col-pink-hover: #F06292;
 $font-main : "Raleway";
 $font-head : "JSlim";
+$font-dilem : "Dilem";
 $font-bg-size : 30px;
 $font-size : 20px;
 $font-sm-size : 16px;
